<resources>
    <string name="app_name">KeepInTouch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_contact">Choose A Contact</string>
    <string name="contact_chosen">Contact Chosen</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call_every">Call Every</string>
    <string name="days"> Days</string>
    <string name="message_every">Message Every</string>
    <string name="whatsapp_every">Send Whatsapp Message</string>
    <string name="rate">Keep in contact Every </string>
    <string name="nickname">Enter a nickname (optional)</string>
    <string name="timesExplanation">Choose the most convenient hours to contact your acquaintances</string>
    <string name="action_settings">Settings</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="date_picker_title">Please Choose A Date</string>
    <string name="firstScreen">Welcome to KeepInTouch App!\nThis app will help you stay in touch
        with the people you care about\n\n Are you ready?</string>
    <string name="choose_date">Pick A Date</string>
    <string name="title_activity_first_screen2">firstScreen2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>

