<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_add_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:background="?android:windowBackground"
    tools:context="com.friends.stay.keepintouch.AddMsgFragment">

    <!--to-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To:"
                android:textSize="25dp"
                android:id="@+id/textView2" />

            <Button
                android:id="@+id/btn_pick_contact"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_contact"
                android:textSize="25dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp" />

        </RelativeLayout>
        <TextView
            android:id="@+id/tv_err_no_chosen_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Please Choose A Contact!"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <!--message type-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type:"
            android:textSize="25dp"
            android:layout_marginRight="30dp"
            android:id="@+id/textView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_type_checkboxes"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView">
            <CheckBox
                android:id="@+id/cb_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />

            <CheckBox
                android:id="@+id/cb_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />

            <CheckBox
                android:id="@+id/cb_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp" />

            <TextView
                android:id="@+id/tv_err_no_chosen_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Choose A Box!"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10dp"
                android:visibility="invisible" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/ib_type_icon"
            android:layout_width="37dp"
            android:layout_height="38dp"
            android:visibility="invisible"
            android:background="#0000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!--Time-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time:"
                android:textSize="25dp"
                android:layout_marginRight="30dp"
                android:id="@+id/textView3" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_date"
                android:textSize="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!--Message-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_message_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message:"
            android:textSize="25dp"
            android:layout_marginRight="30dp" />

        <EditText
            android:inputType="textMultiLine"
            android:id="@+id/et_message_content"
            android:lines="3"
            android:minLines="2"
            android:gravity="top|left"
            android:maxLines="5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            />

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:text="Done" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:text="Delete Message"
            android:visibility="invisible"
            />
    </RelativeLayout>

</LinearLayout>
